Switching from visibility to display in toolbar to avoid an issue in VIPER where explanations were not vertically centered

--- a/vis/stylesheets/modules/_map.scss
+++ b/vis/stylesheets/modules/_map.scss
@@ -192,7 +192,7 @@ text {
 
 .explanation-ids {
     font-size: 11px;
-    visibility: hidden;
+    display: none;
 }
 
 .explanation-id {
